--- a/src/html/WebShortcut/Launcher.html
+++ b/src/html/WebShortcut/Launcher.html
@@ -171,7 +171,7 @@
 			}
 			
 			// Open the connection.
-			xhr.open('POST', 'cgi/parseshortcut.cgi', true);
+			xhr.open('POST', 'http://abcodeworks.com/cgi/parseshortcut.cgi', true);
 			
 			// Set up a handler for when the request finishes.
 			xhr.onload = function () {
