--- a/src/html/WebShortcut/Converter.html
+++ b/src/html/WebShortcut/Converter.html
@@ -72,9 +72,9 @@
           processData: false,
           type: 'POST',
           contentType: "text/xml",
-          success: function(data) {
+          /*success: function(data) {
             processResponse(data);
-          },
+          },*/
           error: function(data) {
             alert('An error occurred!');
           }
