Some parts are kind of working

--- a/src/html/WebShortcut/Launcher.html
+++ b/src/html/WebShortcut/Launcher.html
@@ -118,8 +118,10 @@
         ProcessDraggedShortcutFiles(
           e,
           processResponse,
-          function(data) {
+          function(xhr, ajaxOptions, thrownError) {
             alert('An error occurred!');
+                    alert(xhr.status);
+        alert(thrownError);
           }
         );
       }
