--- a/src/html/WebShortcut/Converter.html
+++ b/src/html/WebShortcut/Converter.html
@@ -53,14 +53,14 @@
   	</header>
     <div id="mainarea">
     <div id="options">
-  <select form="convert">
+  <select name="target_shortcut_type" form="convert">
     <option value="url">Windows (.url)</option>
     <option value="desktop">Linux (.desktop)</option>
     <option value="webloc">Apple (.webloc)</option>
   </select>
             <form id="convert" action="http://abcodeworks.com/cgi/convertshortcut.cgi" method="POST">
   		<fieldset>
-            <input id="archive" type="hidden" name="archive">
+            <input id="archive" type="hidden" name="archive_type">
     		<input id="xmldata" type="hidden" name="xmldata">
   		</fieldset>
   	</form>
