--- a/src/html/WebShortcut/Converter.html
+++ b/src/html/WebShortcut/Converter.html
@@ -58,7 +58,7 @@
     <option value="desktop">Linux (.desktop)</option>
     <option value="webloc">Apple (.webloc)</option>
   </select>
-            <form id="convert" action="http://abcodeworks.com/cgi/convertshortcut.cgi" method="POST">
+            <form id="convert" action="http://abcodeworks.com/cgi/createshortcut.cgi" method="POST">
   		<fieldset>
             <input id="archive" type="hidden" name="archive_type">
     		<input id="xmldata" type="hidden" name="xmldata">
