Fix issues and update documentation
- Note that the "const" keyword is changed to "var"
  for compatibility with Internet Explorer.

--- a/src/html/WebShortcut/Launcher.html
+++ b/src/html/WebShortcut/Launcher.html
@@ -45,7 +45,7 @@
     </div>
   
   	<div id="filedrag">
-        Drop Files Here</br></br>OR</br></br>
+        Drop Files Here<br/><br/>OR<br/><br/>
         <form id="upload_form" action="../cgi/parseshortcut.cgi" method="POST" enctype="multipart/form-data">
   		    <fieldset>
             <input type="hidden" id="MAX_FILE_SIZE" name="MAX_FILE_SIZE" value="100000" />
