--- a/src/html/WebShortcut/index.html
+++ b/src/html/WebShortcut/index.html
@@ -39,6 +39,10 @@
       If you find the website useful and would like to see it improved, please
       <a href="http://abeckus.com/contact.html">let me know</a> (I guess if you hate it you can let me know too).
     </p>
+    
+    <p>
+      The source code for the website is <a href="https://github.com/abcodeworks/WebShortcut-Website">available here</a>. 
+    </p>
 
     <h4>Known issues</h4>
     <p>
@@ -47,6 +51,10 @@
           When converting shortcuts with unicode characters, the downloaded ZIP file will be corrupt.
           I believe that this is due to old libraries on the web server, and I don't expect it to be fixed anytime soon.
           As a workaround, download the files individually.
+        </li>
+        <li>
+          On the Android browser, the website will report an error for files that have unicode characters in the file name.
+          I imagine this will be an issue with some other browsers as well.
         </li>
       </ul>
     </p>
