Updaqte known issues.

--- a/src/html/WebShortcut/index.html
+++ b/src/html/WebShortcut/index.html
@@ -48,8 +48,13 @@
     <p>
       <ul>
         <li>
+          Converter does not work on Internet Explorer.
+        </li>
+        <li>
+          Windows cannot open .url shortcuts created with the Converter website.
+        </li>
+        <li>
           When converting shortcuts with unicode characters, the downloaded ZIP file will be corrupt.
-          I believe that this is due to old libraries on the web server, and I don't expect it to be fixed anytime soon.
           As a workaround, download the files individually.
         </li>
         <li>
