Update comments in index page

--- a/src/html/WebShortcut/index.html
+++ b/src/html/WebShortcut/index.html
@@ -25,6 +25,11 @@
   	</header>
 
     <p>
+      <b>This website is still in the Alpha phase.</b>  There are a number of issues which are listed below.
+      However, feel free to use it and please <a href="http://abeckus.com/contact.html">let me know</a> of any feedback you may have.
+    </p>
+
+    <p>
       This website allows you to launch and to convert web shortcut files.
       Web shortcuts are the files that are created by various operating systems when you save a link to a website.
       It supports shortcut files for Windows, Linux, and Apple.
@@ -32,13 +37,12 @@
       This website is part of the <a href="http://beckus.github.io/WebShortcutUtil/">Web Shortcut Utility Suite</a>.
     </p>
 
-    <p>
-      This website is still in the alpha stage.
+    <!--p>
       It still requires a lot of cosmetic work, and could also use improvements to error handling.
-      Unfotunately, this is a low piority for me, and I don't have plans yet to develop it any further.
+      Unfortunately, this is a low piority for me, and I don't have plans yet to develop it any further.
       If you find the website useful and would like to see it improved, please
       <a href="http://abeckus.com/contact.html">let me know</a> (I guess if you hate it you can let me know too).
-    </p>
+    </p-->
     
     <p>
       The source code for the website is <a href="https://github.com/abcodeworks/WebShortcut-Website">available here</a>. 
