Move cgi folder to consolidate code

--- a/src/html/WebShortcut/Converter.html
+++ b/src/html/WebShortcut/Converter.html
@@ -36,7 +36,7 @@
   		</nav>
   	</header>
 
-    <form id="convert_form" action="../cgi/createshortcut.cgi" method="POST">
+    <form id="convert_form" action="cgi/createshortcut.cgi" method="POST">
   		<fieldset>
         <input id="archive" type="hidden" name="archive_type">
     		<input id="xmldata" type="hidden" name="xmldata">
