--- a/src/html/WebShortcut/Launcher.html
+++ b/src/html/WebShortcut/Launcher.html
@@ -46,7 +46,7 @@
   
   	<div id="filedrag">
         Drop Files Here<br/><br/>OR<br/><br/>
-        <form id="upload_form" action="../cgi/parseshortcut.cgi" method="POST" enctype="multipart/form-data">
+        <form id="upload_form" action="cgi/parseshortcut.cgi" method="POST" enctype="multipart/form-data">
   		    <fieldset>
             <input type="hidden" id="MAX_FILE_SIZE" name="MAX_FILE_SIZE" value="100000" />
   
