Update known issue description for Android browser
This was based on investigation using the files in the dev/showpost
folder - the Android browser does not appear to send the file contents
in the post when the file name has unicode characters.

--- a/src/html/WebShortcut/index.html
+++ b/src/html/WebShortcut/index.html
@@ -60,7 +60,7 @@
         </li>
         <li>
           On the Android browser, the website will report an error for files that have unicode characters in the file name.
-          I imagine this will be an issue with some other browsers as well.
+          This requires more investigation, but appears to be an issue with the browser itself. 
         </li>
       </ul>
     </p>
