Remove unicode characters from file names immediately when they are uploaded.

--- a/src/html/WebShortcut/index.html
+++ b/src/html/WebShortcut/index.html
@@ -52,8 +52,8 @@
     <p>
       <ul>
         <li>
-          When converting shortcuts with unicode characters, the downloaded ZIP file will be corrupt.
-          As a workaround, download the files individually.
+          Unicodes are stripped from file names and replaced with underscores.  I was continuing to have issues
+          with unicode characters, and decided to remove them completely until I could come up with reliable fixes.
         </li>
         <li>
           On the Android browser, the website will report an error for files that have unicode characters in the file name.
