--- a/src/html/WebShortcut/Launcher.html
+++ b/src/html/WebShortcut/Launcher.html
@@ -81,6 +81,7 @@
   			    SetupShortcutUploadBox(
   			      $("#filedrag"),
   			      $("#fileselect"),
+  			      null,
   			      processResponse);
   				
   			    $("#submitbutton")[0].style.display = "none";
