--- a/src/html/WebShortcut/index.html
+++ b/src/html/WebShortcut/index.html
@@ -52,8 +52,11 @@
     <p>
       <ul>
         <li>
-          Unicodes are stripped from file names and replaced with underscores.  I was continuing to have issues
-          with unicode characters, and decided to remove them completely until I could come up with reliable fixes.
+          I continue to have difficulties with files that have unicode characters in the file names and/or URLs.
+          Sometimes these files will cause the website to give errors.  I am not sure what all of the factors are (e.g. how much of the problem
+          is due to browser support and and how much of it is due to server issues).
+          Sometimes the issues seem to be intermittent.
+          I have included a "Remove unicode characters from file names" checkbox on the converter website which may help in some cases.
         </li>
         <li>
           On the Android browser, the website will report an error for files that have unicode characters in the file name.
