Update main page documentation

--- a/src/html/WebShortcut/index.html
+++ b/src/html/WebShortcut/index.html
@@ -52,11 +52,15 @@
     <p>
       <ul>
         <li>
-          I continue to have difficulties with files that have unicode characters in the file names and/or URLs.
+          There are problems with files that have unicode characters in the file names and/or URLs.
           Sometimes these files will cause the website to give errors.  I am not sure what all of the factors are (e.g. how much of the problem
           is due to browser support and and how much of it is due to server issues).
           Sometimes the issues seem to be intermittent.
           I have included a "Remove unicode characters from file names" checkbox on the converter website which may help in some cases.
+        </li>
+        <li>
+          Sometimes .url files will be created as if the URLs contain unicode characters even though they do not.
+          The .url files still work, but are not as clean as they should be.
         </li>
         <li>
           On the Android browser, the website will report an error for files that have unicode characters in the file name.
